--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.1",
+    "metamask-extension-provider": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.4.0",
+    "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
+    "rn-fetch-blob": "0.10.13",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.0"
   },
